@@ -747,6 +747,8 @@ Other memory:
 
 <pre><ul>
 0.3.4 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+
+	* Added netutils/dhcpd
 </pre></ul>
 
 <table width ="100%">
