@@ -40,8 +40,6 @@
  * Included Files
  ****************************************************************************/
 
-#include <sys/socket.h>
-
 /****************************************************************************
  * Definitions
  ****************************************************************************/
@@ -69,37 +67,9 @@
 #define SIOCDIFADDR     (_SIOCBASE|0x000c)  /* Delete IP address */
 #define SIOCGIFCOUNT    (_SIOCBASE|0x000d)  /* Get number of devices */
 
-/* Sizing parameters */
-
-#define IFNAMSIZ        6
-#define IFHWADDRLEN     6
-
 /****************************************************************************
  * Type Definitions
  ****************************************************************************/
-
-struct ifreq
-{
-  char       ifr_name[IFNAMSIZ];      /* Network device name (e.g. "eth0") */
-  union
-  {
-    struct sockaddr ifru_addr;        /* IP Address */
-    struct sockaddr ifru_dstaddr;     /* P-to-P Address */
-    struct sockaddr ifru_broadaddr;   /* Broadcast address */
-    struct sockaddr ifru_netmask;     /* Netmask */
-    struct sockaddr ifru_hwaddr;      /* MAC address */
-    int     ifru_count;               /* Number of devices */
-    int     ifru_mtu;                 /* MTU size */
-  } ifr_ifru;
-};
-
-#define ifr_addr        ifr_ifru.ifru_addr      /* IP address */
-#define ifr_dstaddr     ifr_ifru.ifru_dstaddr   /* P-to-P Address */
-#define ifr_broadaddr   ifr_ifru.ifru_broadaddr /* Broadcast address */
-#define ifr_netmask     ifr_ifru.ifru_netmask   /* Interface net mask */
-#define ifr_hwaddr      ifr_ifru.ifru_hwaddr    /* MAC address */
-#define ifr_mtu         ifr_ifru.ifru_mtu       /* MTU */
-#define ifr_count       ifr_ifru.ifru_count     /* Number of devices */
 
 /****************************************************************************
  * Public Function Prototypes
