@@ -43,9 +43,12 @@
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <sys/ioctl.h>
+
 #include <string.h>
 #include <errno.h>
+
 #include <netinet/in.h>
+#include <net/if.h>
 
 #include <net/uip/uip-lib.h>
 
